logos-codegen/tests/snapshots/codegen__error_callback_failure-tailcall.snap
---
source: logos-codegen/tests/codegen.rs
assertion_line: 40
expression: formatted
---
#[automatically_derived]
impl<'s> ::logos::Logos<'s> for TokenA {
    type Error = ();
    type Extras = ();
    type Source = ::core::primitive::str;
    fn lex(
        lex: &mut ::logos::Lexer<'s, Self>,
    ) -> ::core::option::Option<
        ::core::result::Result<Self, <Self as ::logos::Logos<'s>>::Error>,
    > {
        fn _logos_derive_compile_errors() {
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
            {
                ::core::compile_error!(
                    "expected one of: `for`, parentheses, `unsafe`, `fn`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime"
                )
            }
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
            {
                ::core::compile_error!(
                    "Expected a named argument at this position\n\nhint: If you are trying to define a callback here use: callback = ..."
                )
            }
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
            {
                ::core::compile_error!(
                    "Expected: #[logos(error = SomeType)] or #[logos(error(SomeType[, callback))]"
                )
            }
            { ::core::compile_error!("Callback missing a body") }
            { ::core::compile_error!("Not a valid callback") }
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
            { ::core::compile_error!("Expected: callback = ...") }
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
            { ::core::compile_error!("Callback has been already set") }
            { ::core::compile_error!("Previous callback set here") }
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
            {
                ::core::compile_error!(
                    "Unknown nested attribute: unknown_attribute\n\nExpected one of: callback"
                )
            }
            { ::core::compile_error!("Error type can be defined only once") }
            { ::core::compile_error!("Previous definition here") }
        }
        ::core::unimplemented!()
    }
}
